# LogManager

./: .gitignore  LICENSE  README.md  environment.d.ts  package.json
.github/workflows/: release.yml
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/jsons/: getBtn.json  getLog.json  getLogBtn.json  getModuloJava.json  login.json  logout.json  postBtnJava.json  postCriaModulo.json  postModulo.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs  post_login.rs
src-tauri/src/auth/: login.rs  logout.rs  mod.rs
src-tauri/src/commands/: get_log.rs  get_log_btn.rs  mod.rs  post_modulo_java.rs
src-tauri/src/schemas/: get_log_btn_schema.rs  get_log_schema.rs  latest_jar_schema.rs  login_schema.rs  logout_schema.rs  mod.rs  post_add_btn.rs  post_cria_modulo_schema.rs
src-tauri/src/utils/: mod.rs  replace_param.rs  string_utils.rs
src/components/: Confirm.tsx  Editor.module.css  Login.tsx  Texteditor.tsx  WindowTopBar.tsx
src/components/SideBar/: DeleteModal.tsx  EnviromentSelect.tsx  Footer.tsx  Logo.tsx  SideBar.tsx
src/components/SideBar/Itens/: LinkItems.tsx  NavItem.tsx  index.tsx
src/pages/: AddEnv.tsx  _app.tsx  _document.tsx  index.tsx
src/redux/@types/: LogParams.d.ts
src/redux/actions/: Enviroment.ts
src/redux/reducers/: index.ts
src/redux/store/: index.ts
